[tool.poetry]
name = "tweet-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tweet_data_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
s3fs = "^2023.10.0"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
