[tool.poetry]
name = "tweet-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tweet_data_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
s3fs = "^2023.10.0"
tweepy = "^4.14.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
birdy = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
